@@ -3,7 +3,7 @@
   <parent>
     <groupId>edu.utexas.tacc.tapis</groupId>
     <artifactId>tapis-client-java</artifactId>
-    <version>1.10</version>
+    <version>1.11.40-SNAPSHOT</version>
   </parent>
 
   <artifactId>systems-client</artifactId>
@@ -41,7 +41,9 @@
 
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
-
+    
+    <!-- NOTE: THE CALLED SCRIPT INTRODUCES HIDDEN DEPENDENCIES -->
+    <!--       These dependencies include curl.      -->
     <plugins>
       <!-- Build generated client code using openapi-generator -->
       <plugin>
@@ -94,6 +96,7 @@
         </executions>
       </plugin>
       <!-- failsafe plugin is for running integration tests -->
+      <!-- NOTE: reuseForks=false because clients have static variables for headers and cannot be shared within a JVM -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
@@ -102,6 +105,10 @@
           <environmentVariables>
             <APP_ENV>test</APP_ENV>
           </environmentVariables>
+          <forkCount>3</forkCount>
+          <reuseForks>false</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
         </configuration>
       </plugin>
     </plugins>
